2001-04-23  Arturo Espinosa  <arturo@ximian.com>

	* network.pl.in: init.d script for smb in Debian is samba.
	* service.pl.in (xst_service_sysv_get_paths): Added paths for
	  Debian and Mandrake.
	* time-conf.in: Check for service availability and activation.
	  Minor indentation fixes.
	
2001-04-23  Arturo Espinosa  <arturo@ximian.com>

	* parse.pl.in (xst_parse_interfaces_option_str/kw): this code
	  was passing invalid xst_report keys. How did this get here?

	* time-conf.in: redhat-7.0, mdk-7.2 & debian-2.2 parse/replace
	  tables.
	
2001-04-20  Arturo Espinosa  <arturo@ximian.com>

	* report.pl.in (xst_report): As we are killing the format strings
	  from the frontend common code, we pass it in the report now.
	
2001-04-19  Arturo Espinosa  <arturo@ximian.com>

	* file.pl.in (xst_file_run): return -1 if command fails to be found.
	  return system (command) / 256 (as stated in perlfunc) to return exit
	  code of process. Fixed stdio/stderr redirection.
	  (xst_file_locate_tool): return trivialy if path is absolute.
	* network.pl.in: when checking for "smbuse", use new service behaviour
	  to check for smbd and nmbd.
	  Parsing for hosts and dns servers now filters repeated entries out.
	* service.pl.in (xst_service_sysv_get_status): some init.d scripts are broken.
	  Stole redhat's init.d/function:status to do new, more fine-grained checking.
	  (xst_service_sysv_get_status_any): just a proxy.
	  (xst_service_sysv_run_initd_script): fixed init.d script invocation typo.
	  (xst_service_sysv_set_status): Always set links, to fix broken setups.
	* network-conf.in (xml_parse_network, push_unique): when parsing hosts and
	  dns servers, filter repeated entries out.
	* parse.pl.in (xst_parse_split_all_unique_hash_comment,
	  xst_parse_split_first_array_unique): new functions that return arrays with
	  unique elements.
	
	
2001-04-17  Arturo Espinosa  <arturo@ximian.com>

	* file.pl.in: changed wrong report keys.
	* network-conf.in: smbuse and smbinstalled support.