@@ -23,6 +23,7 @@
 
 
 require "___scriptsdir___/general.pl";
+require "___scriptsdir___/gettext.pl";
 
 
 # --- Progress printing --- #
@@ -126,111 +127,113 @@ sub xst_report
 # This disables reporting.
 &xst_report_set_threshold (0);
 
+&textdomain ("ximian-setup-tools");
+
 %xst_report_message =
     (
-     "begin"    => ["sys", "Start of work report."],
-     "end"      => ["sys", "End of work report."],
-     "progress" => ["sys", "%d"],
-     "compat"   => ["info", "%s."],
+     "begin"    => ["sys", _("Start of work report.")],
+     "end"      => ["sys", _("End of work report.")],
+     "progress" => ["sys", _("%d")],
+     "compat"   => ["info", _("%s.")],
 
-     "platform_list"            => ["sys",   "Supported: [%s]"],
-     "platform_unsup"           => ["error", "Your platform is not supported."],
-     "platform_undet"           => ["error", "Unable to determine host platform."],
-     "platform_success"         => ["sys",   "Configuring for platform [%s]."],
+     "platform_list"            => ["sys",   _("Supported: [%s]")],
+     "platform_unsup"           => ["error", _("Your platform is not supported.")],
+     "platform_undet"           => ["error", _("Unable to determine host platform.")],
+     "platform_success"         => ["sys",   _("Configuring for platform [%s].")],
 
-     "xml_unexp_tag"            => ["error", "Unexpected tag [%s]."],
-     "xml_unexp_arg"            => ["error", "Unexpected argument [%s] to tag [%s]."],
+     "xml_unexp_tag"            => ["error", _("Unexpected tag [%s].")],
+     "xml_unexp_arg"            => ["error", _("Unexpected argument [%s] to tag [%s].")],
 
-     "file_open_read_failed"    => ["warn",  "Could not open [%s] for reading."],
-     "file_open_read_success"   => ["info",  "Reading options from [%s]."],
-     "file_open_write_failed"   => ["error", "Failed to write to [%s]."],
-     "file_open_write_create"   => ["warn",  "Could not find [%s] for writing. Creating [%s]."],
-     "file_open_write_success"  => ["info",  "Writing to [%s]."],
-     "file_create_path"         => ["info",  "Directory [%s] created."],
-     "file_backup_rotate"       => ["info",  "Backup directory [%s] was rotated."],
-     "file_backup_success"      => ["info",  "Saved backup for [%s]."],
-     "file_open_filter_failed"  => ["warn",  "No file to patch: [%s]."],
-     "file_open_filter_create"  => ["warn",  "Could not find [%s] for patching. Creating [%s]."],
-     "file_open_filter_success" => ["info",  "Found [%s]. Patching [%s]."],
-     "file_buffer_load"         => ["info",  "Loading file [%s] to buffer."],
-     "file_buffer_save"         => ["info",  "Saving buffer to file [%s]."],
-     "file_run"                 => ["info",  "Running command [%s]."],
-     "file_locate_tool_success" => ["info",  "Found tool [%s]."],
-     "file_locate_tool_failed"  => ["warn",  "Couldn't find tool [%s]."],
+     "file_open_read_failed"    => ["warn",  _("Could not open [%s] for reading.")],
+     "file_open_read_success"   => ["info",  _("Reading options from [%s].")],
+     "file_open_write_failed"   => ["error", _("Failed to write to [%s].")],
+     "file_open_write_create"   => ["warn",  _("Could not find [%s] for writing. Creating [%s].")],
+     "file_open_write_success"  => ["info",  _("Writing to [%s].")],
+     "file_create_path"         => ["info",  _("Directory [%s] created.")],
+     "file_backup_rotate"       => ["info",  _("Backup directory [%s] was rotated.")],
+     "file_backup_success"      => ["info",  _("Saved backup for [%s].")],
+     "file_open_filter_failed"  => ["warn",  _("No file to patch: [%s].")],
+     "file_open_filter_create"  => ["warn",  _("Could not find [%s] for patching. Creating [%s].")],
+     "file_open_filter_success" => ["info",  _("Found [%s]. Patching [%s].")],
+     "file_buffer_load"         => ["info",  _("Loading file [%s] to buffer.")],
+     "file_buffer_save"         => ["info",  _("Saving buffer to file [%s].")],
+     "file_run"                 => ["info",  _("Running command [%s].")],
+     "file_locate_tool_success" => ["info",  _("Found tool [%s].")],
+     "file_locate_tool_failed"  => ["warn",  _("Couldn't find tool [%s].")],
      
-     "parse_trivial"            => ["info",  "Trivialy passing [%s]."],
-     "parse_split"              => ["info",  "Getting option [%s] from [%s]."],
-     "parse_split_hash"         => ["info",  "Getting configurations from [%s]."],
-     "parse_sh"                 => ["info",  "Getting shell option [%s] from [%s]."],
-     "parse_kw"                 => ["info",  "Getting keyword [%s] from [%s]."],
-     "parse_line_first"         => ["info",  "Getting information from [%s]."],
-     "parse_chat"               => ["info",  "Getting chat information from [%s]."],
-     "parse_ini"                => ["info",  "Getting option [%s] from [%s], section [%s]."],
-     "parse_ifaces_str"         => ["info",  "Getting option [%s] from interface [%s]."],
-     "parse_ifaces_kw"          => ["info",  "Getting keyword [%s] from interface [%s]."],
-     "parse_ifaces_kw_strange"  => ["warn",  "Keyword for interface [%s] in [%s] had unexpected value."],
+     "parse_trivial"            => ["info",  _("Trivialy passing [%s].")],
+     "parse_split"              => ["info",  _("Getting option [%s] from [%s].")],
+     "parse_split_hash"         => ["info",  _("Getting configurations from [%s].")],
+     "parse_sh"                 => ["info",  _("Getting shell option [%s] from [%s].")],
+     "parse_kw"                 => ["info",  _("Getting keyword [%s] from [%s].")],
+     "parse_line_first"         => ["info",  _("Getting information from [%s].")],
+     "parse_chat"               => ["info",  _("Getting chat information from [%s].")],
+     "parse_ini"                => ["info",  _("Getting option [%s] from [%s], section [%s].")],
+     "parse_ifaces_str"         => ["info",  _("Getting option [%s] from interface [%s].")],
+     "parse_ifaces_kw"          => ["info",  _("Getting keyword [%s] from interface [%s].")],
+     "parse_ifaces_kw_strange"  => ["warn",  _("Keyword for interface [%s] in [%s] had unexpected value.")],
 
-     "replace_split"            => ["info",  "Replacing key [%s] in [%s]."],
-     "replace_sh"               => ["info",  "Replacing shell var [%s] in [%s]."],
-     "replace_kw"               => ["info",  "Replacing keyword [%s] in [%s]."],
-     "replace_line_first"       => ["info",  "Replacing contents of file [%s]."],
-     "replace_chat"             => ["info",  "Replacing values in [%s]."],
-     "replace_ini"              => ["info",  "Replacing variable [%s] in section [%s] of [%s]."],
-     "replace_ifaces_str"       => ["info",  "Replacing option [%s] from interface [%s]."],
-     "replace_ifaces_kw"        => ["info",  "Replacing keyword [%s] from interface [%s]."],
+     "replace_split"            => ["info",  _("Replacing key [%s] in [%s].")],
+     "replace_sh"               => ["info",  _("Replacing shell var [%s] in [%s].")],
+     "replace_kw"               => ["info",  _("Replacing keyword [%s] in [%s].")],
+     "replace_line_first"       => ["info",  _("Replacing contents of file [%s].")],
+     "replace_chat"             => ["info",  _("Replacing values in [%s].")],
+     "replace_ini"              => ["info",  _("Replacing variable [%s] in section [%s] of [%s].")],
+     "replace_ifaces_str"       => ["info",  _("Replacing option [%s] from interface [%s].")],
+     "replace_ifaces_kw"        => ["info",  _("Replacing keyword [%s] from interface [%s].")],
      
-     "service_status_running"   => ["info",  "Service [%s] is running."],
-     "service_status_stopped"   => ["info",  "Service [%s] is stopped."],
-     "service_sysv_not_found"   => ["warn",  "Could not find SystemV scripts for service [%s]."],
-     "service_sysv_no_runlevel" => ["warn",  "Could not find SystemV runlevel [%s] directory [%s]."],
-     "service_sysv_remove_link" => ["info",  "Removed SystemV link [%s]."],
-     "service_sysv_add_link"    => ["info",  "Created SystemV link [%s]."],
-     "service_sysv_op_unk"      => ["error", "Unknown initd operation [%s]."],
-     "service_sysv_op_success"  => ["info",  "Service [%s] %s."],
-     "service_sysv_op_failed"   => ["warn",  "Service [%s] cound not be %s."],
+     "service_status_running"   => ["info",  _("Service [%s] is running.")],
+     "service_status_stopped"   => ["info",  _("Service [%s] is stopped.")],
+     "service_sysv_not_found"   => ["warn",  _("Could not find SystemV scripts for service [%s].")],
+     "service_sysv_no_runlevel" => ["warn",  _("Could not find SystemV runlevel [%s] directory [%s].")],
+     "service_sysv_remove_link" => ["info",  _("Removed SystemV link [%s].")],
+     "service_sysv_add_link"    => ["info",  _("Created SystemV link [%s].")],
+     "service_sysv_op_unk"      => ["error", _("Unknown initd operation [%s].")],
+     "service_sysv_op_success"  => ["info",  _("Service [%s] %s.")],
+     "service_sysv_op_failed"   => ["warn",  _("Service [%s] cound not be %s.")],
 
-     "network_dialing_get"      => ["info",  "Loading ISP configurations."],
-     "network_iface_active_get" => ["info",  "Finding active interfaces."],
-     "network_iface_is_active"  => ["info",  "Checking if interface [%s] is active."],
-     "network_hostname_set"     => ["info",  "Setting hostname."],
-     "network_dialing_set"      => ["info",  "Saving ISP configurations."],
-     "network_remove_pap"       => ["info",  "Removing entry [%s] from [%s]."],
-     "network_iface_set"        => ["info",  "Configuring interface [%s]."],
-     "network_iface_activate"   => ["info",  "Activating interface [%s]."],
-     "network_iface_deactivate" => ["info",  "Deactivating interface [%s]."],
-     "network_ifaces_set"       => ["info",  "Setting up interfaces."],
-     "network_get_pap_passwd"   => ["info",  "Getting PAP/CHAP password for [%s] from [%s]."],
-     "network_get_ppp_option"   => ["info",  "Getting option [%s] from [%s]."],
-     "network_set_ppp_option"   => ["info",  "Setting option [%s] in [%s]."],
-     "network_set_ppp_connect"  => ["info",  "Setting connect option in [%s]."],
-     "network_get_ppp_unsup"    => ["info",  "Getting additional options from [%s]."],
-     "network_set_ppp_unsup"    => ["info",  "Setting additional options in [%s]."],
-     "network_bootproto_unsup"  => ["warn",  "Boot method [%s] for interface [%s] not supported."],
-     "network_get_remote"       => ["info",  "Getting remote address for interface [%s]."],
-     "network_set_remote"       => ["info",  "Setting remote address for interface [%s]."],
-     "network_ensure_lo"        => ["info",  "Ensuring loopback interface configuration."],
+     "network_dialing_get"      => ["info",  _("Loading ISP configurations.")],
+     "network_iface_active_get" => ["info",  _("Finding active interfaces.")],
+     "network_iface_is_active"  => ["info",  _("Checking if interface [%s] is active.")],
+     "network_hostname_set"     => ["info",  _("Setting hostname.")],
+     "network_dialing_set"      => ["info",  _("Saving ISP configurations.")],
+     "network_remove_pap"       => ["info",  _("Removing entry [%s] from [%s].")],
+     "network_iface_set"        => ["info",  _("Configuring interface [%s].")],
+     "network_iface_activate"   => ["info",  _("Activating interface [%s].")],
+     "network_iface_deactivate" => ["info",  _("Deactivating interface [%s].")],
+     "network_ifaces_set"       => ["info",  _("Setting up interfaces.")],
+     "network_get_pap_passwd"   => ["info",  _("Getting PAP/CHAP password for [%s] from [%s].")],
+     "network_get_ppp_option"   => ["info",  _("Getting option [%s] from [%s].")],
+     "network_set_ppp_option"   => ["info",  _("Setting option [%s] in [%s].")],
+     "network_set_ppp_connect"  => ["info",  _("Setting connect option in [%s].")],
+     "network_get_ppp_unsup"    => ["info",  _("Getting additional options from [%s].")],
+     "network_set_ppp_unsup"    => ["info",  _("Setting additional options in [%s].")],
+     "network_bootproto_unsup"  => ["warn",  _("Boot method [%s] for interface [%s] not supported.")],
+     "network_get_remote"       => ["info",  _("Getting remote address for interface [%s].")],
+     "network_set_remote"       => ["info",  _("Setting remote address for interface [%s].")],
+     "network_ensure_lo"        => ["info",  _("Ensuring loopback interface configuration.")],
      
-     "boot_lilo_failed"         => ["warn",  "Failed to run lilo."],
-     "boot_lilo_success"        => ["info",  "Succesfully executed lilo."],
+     "boot_lilo_failed"         => ["warn",  _("Failed to run lilo.")],
+     "boot_lilo_success"        => ["info",  _("Succesfully executed lilo.")],
 
-     "disks_fstab_add"          => ["info",  "Adding [%s] to fstab."],
-     "disks_partition_probe"    => ["info",  "Looking for partitions on [%s]."],
-     "disks_size_query"         => ["info",  "Querying size of [%s]."],
-     "disks_mount"              => ["info",  "Mounting [%s]."],
-     "disks_umount"             => ["info",  "Unmounting [%s]."],
-     "disks_mount_error"        => ["error", "Could not find mount tools. No mounting done."],
+     "disks_fstab_add"          => ["info",  _("Adding [%s] to fstab.")],
+     "disks_partition_probe"    => ["info",  _("Looking for partitions on [%s].")],
+     "disks_size_query"         => ["info",  _("Querying size of [%s].")],
+     "disks_mount"              => ["info",  _("Mounting [%s].")],
+     "disks_umount"             => ["info",  _("Unmounting [%s].")],
+     "disks_mount_error"        => ["error", _("Could not find mount tools. No mounting done.")],
      
-     "memory_swap_found"        => ["info",  "Found swap entry [%s]."],
-     "memory_swap_probe"        => ["info",  "Looking for swap entries."],
+     "memory_swap_found"        => ["info",  _("Found swap entry [%s].")],
+     "memory_swap_probe"        => ["info",  _("Looking for swap entries.")],
      
-     "print_no_printtool"       => ["warn",  "No printtool setup in directory [%s]."],
+     "print_no_printtool"       => ["warn",  _("No printtool setup in directory [%s].")],
 
-     "time_timezone_scan"       => ["info",  "Scanning timezones."],
-     "time_timezone_cmp"        => ["info",  "Scanning timezones: [%s]."],
-     "time_timezone_set"        => ["info",  "Setting timezone as [%s]."],
-     "time_localtime_set"       => ["info",  "Setting local time as [%s]."],
+     "time_timezone_scan"       => ["info",  _("Scanning timezones.")],
+     "time_timezone_cmp"        => ["info",  _("Scanning timezones: [%s].")],
+     "time_timezone_set"        => ["info",  _("Setting timezone as [%s].")],
+     "time_localtime_set"       => ["info",  _("Setting local time as [%s].")],
 
-     "users_getting_db"         => ["info",  "Getting user database."]
+     "users_getting_db"         => ["info",  _("Getting user database.")]
      );
 
 1;
